# cuda-projects

./: .gitignore  Makefile  index_points.cu
project1/: Makefile
project2/: .gitignore  CMakeLists.txt  haversine.cu  test_cities.py  test_nyc_cabs.py
